modifier et corriger le path d'elements html

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/pages/about.html">About</a>
+                  <a class="nav-link" href="pages/about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/pages/service.html">Services</a>
+                  <a class="nav-link" href="pages/service.html">Services</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/pages/contact.html">Contact Us</a>
+                  <a class="nav-link" href="pages/contact.html">Contact Us</a>
                 </li>
               </ul>
             </div>
@@ -62,7 +62,7 @@
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui harum voluptatem adipisci. Quos molestiae saepe dicta nobis pariatur, tempora iusto, ad possimus soluta hic praesentium mollitia consequatur beatae, aspernatur culpa.
               </p>
-              <a href="./pages/contact.html">
+              <a href="pages/contact.html">
                 Contact Us
               </a>
             </div>
