--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,7 +17,7 @@
             <nav class="navbar navbar-expand-lg custom_nav-container ">
               <a class="navbar-brand" href="index.html">
                 <a class="navbar-brand" href="index.html">
-                    <img class="img-logo-header" src="/images/sos-logo.png" alt="">
+                    <img class="img-logo-header" src="images/sos-logo.png" alt="">
                   </a>
               </a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,13 +30,13 @@
                     <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/pages/about.html">About</a>
+                    <a class="nav-link" href="pages/about.html">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/pages/service.html">Services</a>
+                    <a class="nav-link" href="pages/service.html">Services</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/pages/contact.html">Contact Us</a>
+                    <a class="nav-link" href="pages/contact.html">Contact Us</a>
                   </li>
                 </ul>
               </div>
