--- a/pages/about.html
+++ b/pages/about.html
@@ -30,13 +30,13 @@
                     <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link" href="../pages/about.html">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="service.html">Services</a>
+                    <a class="nav-link" href="../pages/service.html">Services</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact Us</a>
+                    <a class="nav-link" href="../pages/contact.html">Contact Us</a>
                   </li>
                 </ul>
               </div>
