--- a/pages/contact.html
+++ b/pages/contact.html
@@ -35,7 +35,7 @@
                   <li class="nav-item">
                     <a class="nav-link" href="../pages/service.html">Services</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item active">
                     <a class="nav-link" href="../pages/contact.html">Contact Us</a>
                   </li>
                 </ul>
