--- a/pages/about.html
+++ b/pages/about.html
@@ -15,11 +15,9 @@
         <div class="header_bottom">
           <div class="container-fluid">
             <nav class="navbar navbar-expand-lg custom_nav-container ">
-              <a class="navbar-brand" href="index.html">
-                <a class="navbar-brand" href="index.html">
-                    <img class="img-logo-header" src="../images/sos-logo.png" alt="">
-                  </a>
-              </a>
+              <a class="navbar-brand" href="../index.html">
+                  <img class="img-logo-header" src="../images/sos-logo.png" alt="">
+                </a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class=""> </span>
               </button>
